# heat-pump-calculator

./: README.md  justfile  package-lock.json  start.sh
client/: package-lock.json  package.json
client/public/: results.html
client/src/: App.css  App.js
client/src/components/FAQ/: FAQ.scss
client/src/components/calculator/: CalcSteps.jsx  Calculator.css  Step1.css  Step1.jsx  Step2.css  Step2.jsx  Step3.jsx  StepComponents.jsx  StepPage.jsx
client/src/components/common/: CustomComponents.css  CustomComponents.jsx  Header.css  Header.jsx  Results.css  Results.jsx  Sidebar.css  Sidebar.jsx
client/src/components/compareHP/: CompareHP.jsx  Results.jsx  compareHP.css
client/src/components/dashboard/: Dashboard.css  Dashboard.jsx
client/src/components/energySavingTips/: EnergySavingTips.jsx  EnergySavingTips.scss
client/src/components/home/: Home.css  Home.jsx
client/src/components/intro/: IntroPage.scss
client/src/components/pages/: Dashboard.css  Dashboard.jsx  EnergySavingTips.jsx  EnergySavingTips.scss  FAQ.jsx  FAQ.scss  Intro.js  IntroPage.jsx  Pages.jsx  (+2 more)
client/src/controller/: store.js
client/src/style/: main.scss
server/: .gitignore  csv_table.py  package-lock.json  package.json  prototype.py  pyproject.toml  read.py  recalc.py  server.js  server.py  temp.js
server/data/: ASHP Calculator - U of C.xlsm  data.js  heat-pump.xlsm  test.xlsx
server/routes/: api-request-schema.js  appRoutes.js
tests/: Compare_Heat_Pumps.side  FAQ_Page_Test.side  Find A Heat Pump Test.side  Heat_Pumps_and_Energy_Efficient_and_Electricity_Efficient_Test.side
(+7 files in other folders)
