[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Beau McCartney <mccartney.beausl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xlwings = "^0.30.13"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
