[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Beau McCartney <mccartney.beausl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
xlwings = "^0.30.13"
icecream = "^2.1.3"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
